tests/examples/bad/function_call_not_defined.lat
int main() {
    g();
    return 0;
}

int f() {
    return 1;
}